--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Tiddler-Blue",
+    "subTitle":"open for progress",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/182206233?v=4",
     "GMEEK_VERSION":"last"
 }
