--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/182206233?v=4",
     "GMEEK_VERSION":"last",
     "themeMode":"manual",
-    "dayTheme":"light",
-    "nightTheme":"dark",
+    "dayTheme":"dark",
+    "nightTheme":"dark-blue"
 }
